--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@auth0/auth0-angular": "^1.9.0",
     "@popperjs/core": "^2.11.5",
     "@swimlane/ngx-charts": "^20.1.0",
     "bootstrap": "^5.1.3",
