--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@auth0/auth0-angular": "^1.9.0",
+    "@googlemaps/js-api-loader": "^1.14.3",
     "@popperjs/core": "^2.11.5",
     "@swimlane/ngx-charts": "^20.1.0",
     "bootstrap": "^5.1.3",
@@ -32,6 +33,7 @@
     "@angular/cli": "~13.3.1",
     "@angular/compiler-cli": "~13.3.0",
     "@types/d3": "^7.1.0",
+    "@types/google.maps": "^3.49.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
